support icon color in option in combobox

--- a/src/components/Combobox/__stories__/combobox.stories.mdx
+++ b/src/components/Combobox/__stories__/combobox.stories.mdx
@@ -243,9 +243,9 @@ When having a lot of options, you may use headings to categorize them.
     {() => {
       const options = useMemo(
         () => [
-          { id: "1", label: "Option 1", leftIcon: Wand },
-          { id: "2", label: "Option 2", leftIcon: ThumbsUp },
-          { id: "3", label: "Option 3", leftIcon: Time },
+          { id: "1", label: "Option 1", leftIcon: Wand, iconColor: "red" },
+          { id: "2", label: "Option 2", leftIcon: ThumbsUp, iconColor: "green" },
+          { id: "3", label: "Option 3", leftIcon: Time, iconColor: "blue" },
           { id: "4", label: "Option 4", leftIcon: Update },
           { id: "5", label: "Option 5", leftIcon: Upgrade }
         ],
