--- a/src/components/Modal/__stories__/modal.stories.mdx
+++ b/src/components/Modal/__stories__/modal.stories.mdx
@@ -3,14 +3,15 @@ import { useModalHelper } from "./helpers";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import { createStoryMetaSettings } from "../../../storybook";
 import "./Modal.stories.scss";
-import { Button, ModalContent, ModalFooter, ModalHeader, TextField } from "components";
+import { Button, ModalContent, ModalFooter, ModalHeader, TextField } from "../../../components";
 import {
   TOOLTIP,
   ALERT_BANNER,
   Tipseen
 } from "../../../storybook/components/related-components/component-description-map";
-import { Settings } from "components/Icon/Icons";
-import { RelatedComponents } from "../../../storybook"; import { useState } from "react";
+import Settings from "../../../components/Icon/Icons/components/Settings";
+import { RelatedComponents } from "../../../storybook";
+import { useState } from "react";
 
 export const metaSettings = createStoryMetaSettings({
   component: Modal,
