--- a/src/components/Dropdown/__stories__/dropdown.stories.mdx
+++ b/src/components/Dropdown/__stories__/dropdown.stories.mdx
@@ -1,11 +1,11 @@
 import Dropdown from "../Dropdown";
-import { useState, useCallback, useMemo } from "react";
-import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
+import { useCallback, useMemo, useState } from "react";
+import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import { createStoryMetaSettings, Link } from "../../../storybook";
 import {
   COMBOBOX,
-  SPLIT_BUTTON,
-  MENU
+  MENU,
+  SPLIT_BUTTON
 } from "../../../storybook/components/related-components/component-description-map";
 import { overviewPlaySuite } from "../__tests__/Dropdown.interactions";
 import Label from "../../Label/Label.jsx";
@@ -17,10 +17,7 @@ import { OptionRenderer } from "./OptionRenderer.js";
 import Flex from "../../../components/Flex/Flex";
 import "./dropdown.stories.scss";
 import { StoryDescription } from "../../../storybook/components/story-description/story-description";
-import {
-  Attach,
-  Email
-} from "../../Icon/Icons";
+import { Attach, Email } from "../../Icon/Icons";
 
 export const metaSettings = createStoryMetaSettings({
   component: Dropdown,
@@ -145,60 +142,67 @@ The Dropdown component supports multiple options selection in two different stat
 <Canvas>
   <Story name="Multi-choice with different states">
     {() => {
-      const options = useMemo( () => [
-        {
-          value: "Rotem",
-          label: "Rotem Dekel"
-        }, {
-          value:"Hadas",
-          label: "Hadas Farhi"
-        }, {
-          value: "Netta",
-          label: "Netta Muller",
-        },
-        {
-          value: "Dor",
-          label: "Dor Yehuda",
-        }], []);
-      return (<Flex wrap gap={Flex.gaps.MEDIUM}>
-        <StoryDescription description="Single line" vertical>
-          <div style={{width: "400px"}}>
-            <Dropdown
-              placeholder="Single line multi state"
-              defaultValue={[options[0]]}
-              options={options}
-              multi
-              className="dropdown-stories-styles_with-chips"
-            />
-          </div>
-        </StoryDescription>
-        <StoryDescription description="Multiple lines" vertical>
-          <div style={{width: "400px"}}>
-            <Dropdown
-              placeholder="Multiple line multi state"
-              defaultValue={[options[0]]}
-              options={options}
-              multi
-              multiline
-              className="dropdown-stories-styles_with-chips"
-            />
-          </div>
-        </StoryDescription>
-        <StoryDescription description="Mandatory default values" vertical>
-          <div style={{width: "400px"}}>
-            <Dropdown
-              defaultValue={[options[0]]}
-              options={options}
-              multi
-              multiline
-              className="dropdown-stories-styles_with-chips"
-              withMandatoryDefaultOptions
-            />
-          </div>
-        </StoryDescription>
-      </Flex>);
-      }
-    }
+      const options = useMemo(
+        () => [
+          {
+            value: "Rotem",
+            label: "Rotem Dekel"
+          },
+          {
+            value: "Hadas",
+            label: "Hadas Farhi"
+          },
+          {
+            value: "Netta",
+            label: "Netta Muller"
+          },
+          {
+            value: "Dor",
+            label: "Dor Yehuda"
+          }
+        ],
+        []
+      );
+      return (
+        <Flex wrap gap={Flex.gaps.MEDIUM}>
+          <StoryDescription description="Single line" vertical>
+            <div style={{ width: "400px" }}>
+              <Dropdown
+                placeholder="Single line multi state"
+                defaultValue={[options[0]]}
+                options={options}
+                multi
+                className="dropdown-stories-styles_with-chips"
+              />
+            </div>
+          </StoryDescription>
+          <StoryDescription description="Multiple lines" vertical>
+            <div style={{ width: "400px" }}>
+              <Dropdown
+                placeholder="Multiple line multi state"
+                defaultValue={[options[0]]}
+                options={options}
+                multi
+                multiline
+                className="dropdown-stories-styles_with-chips"
+              />
+            </div>
+          </StoryDescription>
+          <StoryDescription description="Mandatory default values" vertical>
+            <div style={{ width: "400px" }}>
+              <Dropdown
+                defaultValue={[options[0]]}
+                options={options}
+                multi
+                multiline
+                className="dropdown-stories-styles_with-chips"
+                withMandatoryDefaultOptions
+              />
+            </div>
+          </StoryDescription>
+        </Flex>
+      );
+    }}
   </Story>
 </Canvas>
 
@@ -206,63 +210,112 @@ The Dropdown component supports multiple options selection in two different stat
 
 <Canvas>
   <Story name="Dropdown with avatar">
-    {()=>{
-      const optionsAvatar = useMemo( () => [
-        {
-          value: "Rotem",
-          label: "Rotem Dekel",
-          leftAvatar: person1
-        }, {
-          value:"Hadas",
-          label: "Hadas Farhi",
-          leftAvatar: person2
-        }, {
-          value: "Netta",
-          label: "Netta Muller",
-          leftAvatar: person3
-        }], []);
-    return (<StoryDescription vertical>
-      <div>
-        <Dropdown
-          defaultValue={[optionsAvatar[0]]}
-          options={optionsAvatar}
-          multi
-          multiline
-          className="dropdown-stories-styles_with-chips"
-        />
-      </div>
-    </StoryDescription>)
+    {() => {
+      const optionsAvatar = useMemo(
+        () => [
+          {
+            value: "Rotem",
+            label: "Rotem Dekel",
+            leftAvatar: person1
+          },
+          {
+            value: "Hadas",
+            label: "Hadas Farhi",
+            leftAvatar: person2
+          },
+          {
+            value: "Netta",
+            label: "Netta Muller",
+            leftAvatar: person3
+          }
+        ],
+        []
+      );
+      return (
+        <StoryDescription vertical>
+          <div>
+            <Dropdown
+              defaultValue={[optionsAvatar[0]]}
+              options={optionsAvatar}
+              multi
+              multiline
+              className="dropdown-stories-styles_with-chips"
+            />
+          </div>
+        </StoryDescription>
+      );
     }}
   </Story>
 </Canvas>
 
-
 ### Dropdown with icon
+
 <Canvas>
   <Story name="Dropdown with icon">
-    {()=> {
-      const optionsIcons = useMemo(()=>[
-        {
-          value: "email",
-          label: "Email",
-          leftIcon: Email
-        }, {
-          value:"attach",
-          label: "Attach",
-          leftIcon: Attach
-        }
-      ], [])
-      return (<StoryDescription vertical>
-        <div>
-          <Dropdown
-            defaultValue={[optionsIcons[0]]}
-            options={optionsIcons}
-            multi
-            multiline
-            className="dropdown-stories-styles_with-chips"
-          />
-        </div>
-      </StoryDescription>)
+    {() => {
+      const optionsIcons = useMemo(
+        () => [
+          {
+            value: "email",
+            label: "Email",
+            leftIcon: Email
+          },
+          {
+            value: "attach",
+            label: "Attach",
+            leftIcon: Attach
+          }
+        ],
+        []
+      );
+      return (
+        <StoryDescription vertical>
+          <div>
+            <Dropdown
+              defaultValue={[optionsIcons[0]]}
+              options={optionsIcons}
+              multi
+              multiline
+              className="dropdown-stories-styles_with-chips"
+            />
+          </div>
+        </StoryDescription>
+      );
+    }}
+  </Story>
+</Canvas>
+
+### Dropdown with tooltips on items
+
+<Canvas>
+  <Story name="Dropdown with tooltips on items">
+    {() => {
+      const optionsWithTooltips = useMemo(
+        () => [
+          {
+            value: "Option 1",
+            label: "Option 1",
+            tooltipProps: { content: "Description for option 1" }
+          },
+          {
+            value: "Option 2",
+            label: "Option 2",
+            tooltipProps: { content: "Description for option 2" }
+          }
+        ],
+        []
+      );
+      return (
+        <StoryDescription vertical>
+          <div>
+            <Dropdown
+              placeholder={"Placeholder text here"}
+              options={optionsWithTooltips}
+              className="dropdown-stories-styles_with-chips"
+            />
+          </div>
+        </StoryDescription>
+      );
     }}
   </Story>
 </Canvas>
