--- a/src/components/Combobox/__stories__/combobox.stories.mdx
+++ b/src/components/Combobox/__stories__/combobox.stories.mdx
@@ -6,7 +6,7 @@ import person3 from "./assets/person3.png";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import { defaultPlaySuite } from "../__tests__/combobox-interactions";
 import DialogContentContainer from "../../DialogContentContainer/DialogContentContainer.jsx";
-import Button from "../../Button/Button.jsx";
+import Button from "../../Button/Button";
 import Dialog from "../../Dialog/Dialog";
 import { Update, Time, Upgrade, ThumbsUp, Wand, Person } from "../../Icon/Icons";
 import { TOOLTIP, BREADCRUBMS, CHIP } from "../../../storybook/components/related-components/component-description-map";
