--- a/src/components/Toast/__stories__/toast.stories.mdx
+++ b/src/components/Toast/__stories__/toast.stories.mdx
@@ -2,10 +2,14 @@ import { useState, useCallback, useMemo } from "react";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import Toast from "../Toast";
 import { createComponentTemplate, createStoryMetaSettings } from "../../../storybook/functions/create-component-story";
-import Button from "../../Button/Button.jsx";
+import Button from "../../Button/Button";
 import { Link } from "../../../storybook/components";
-import { TOOLTIP, ATTENTION_BOX, ALERT_BANNER } from "../../../storybook/components/related-components/component-description-map";
-import { Delete } from "../../Icon/Icons"
+import {
+  TOOLTIP,
+  ATTENTION_BOX,
+  ALERT_BANNER
+} from "../../../storybook/components/related-components/component-description-map";
+import { Delete } from "../../Icon/Icons";
 import "./toast.stories.scss";
 
 export const metaSettings = createStoryMetaSettings({
@@ -14,12 +18,7 @@ export const metaSettings = createStoryMetaSettings({
   iconPropNamesArray: ["icon"]
 });
 
-<Meta
-  title="Feedback/Toast"
-  component={ Toast }
-  argTypes={ metaSettings.argTypes }
-  decorators={ metaSettings.decorators }
-/>
+<Meta title="Feedback/Toast" component={Toast} argTypes={metaSettings.argTypes} decorators={metaSettings.decorators} />
 
 <!--- Component template -->
 
@@ -28,6 +27,7 @@ export const toastTemplate = createComponentTemplate(Toast);
 <!--- Component documentation -->
 
 # Toast
+
 - [Overview](#overview)
 - [Props](#props)
 - [Usage](#usage)
@@ -38,68 +38,86 @@ export const toastTemplate = createComponentTemplate(Toast);
 - [Feedback](#feedback)
 
 ## Overview
+
 A toast notification is a message object that presents timely information, including confirmation of actions, alerts, and errors.
 
 <Canvas>
-  <Story name="Overview"
-         args={ {children: "General message toast", open: true, className: "monday-storybook-toast_wrapper", actions: [{ type: Toast.actionTypes.BUTTON, content: "Button" }]} }>
-    { toastTemplate.bind({}) }
+  <Story
+    name="Overview"
+    args={{
+      children: "General message toast",
+      open: true,
+      className: "monday-storybook-toast_wrapper",
+      actions: [{ type: Toast.actionTypes.BUTTON, content: "Button" }]
+    }}
+  >
+    {toastTemplate.bind({})}
   </Story>
 </Canvas>
 
 ## Props
-<ArgsTable of={ Toast } />
+
+<ArgsTable of={Toast} />
 
 ## Usage
-<UsageGuidelines guidelines={[
-  "Use toast notifications immediately after a specific event such as a user action that does not relate to an object on the page. Toast used as a feedback loop to a user’s action.",
-  "Toasts should appear one at a time, and only disappear when no longer required.",
-  "Always be clear, concise and, where possible, give follow up actions to allow the user to become more informed or resolve the issue.",
-  "Always provide an action button or option to undo.",
-  "Toast should overlay permanent UI elements without blocking important actions.",
-]}/>
 
-<Tip title="Check yourself">Need to inform the user about a system’s action? Use an <Link href="/?path=/docs/feedback-alertbanner--overview" size={Link.sizes.SMALL} withoutSpacing>Alert banner</Link> instead.</Tip>
+<UsageGuidelines
+  guidelines={[
+    "Use toast notifications immediately after a specific event such as a user action that does not relate to an object on the page. Toast used as a feedback loop to a user’s action.",
+    "Toasts should appear one at a time, and only disappear when no longer required.",
+    "Always be clear, concise and, where possible, give follow up actions to allow the user to become more informed or resolve the issue.",
+    "Always provide an action button or option to undo.",
+    "Toast should overlay permanent UI elements without blocking important actions."
+  ]}
+/>
+
+<Tip title="Check yourself">
+  Need to inform the user about a system’s action? Use an{" "}
+  <Link href="/?path=/docs/feedback-alertbanner--overview" size={Link.sizes.SMALL} withoutSpacing>
+    Alert banner
+  </Link>{" "}
+  instead.
+</Tip>
 
 ## Variants
+
 ### Default with button
+
 <Canvas>
   <Story name="Default with button">
     {() => {
       const actions = useMemo(() => [{ type: Toast.actionTypes.BUTTON, content: "Button" }], []);
       return (
-        <Toast 
-          open
-          autoHideDuration={5000} 
-          actions={actions}
-          className="monday-storybook-toast_wrapper"
-        >
-        General message toast
-      </Toast>);
+        <Toast open autoHideDuration={5000} actions={actions} className="monday-storybook-toast_wrapper">
+          General message toast
+        </Toast>
+      );
     }}
   </Story>
 </Canvas>
 
 ### Toast with link
+
 <Canvas>
   <Story name="Toast with link">
     {() => {
-      const actions = useMemo(() => [{ type: Toast.actionTypes.LINK, text: "Link to action", href: "https://monday.com" }], []);
+      const actions = useMemo(
+        () => [{ type: Toast.actionTypes.LINK, text: "Link to action", href: "https://monday.com" }],
+        []
+      );
       return (
-        <Toast 
-          open
-          actions={actions}
-          autoHideDuration={5000}
-           className="monday-storybook-toast_wrapper"
-        >
-        General message toast
-      </Toast>);
+        <Toast open actions={actions} autoHideDuration={5000} className="monday-storybook-toast_wrapper">
+          General message toast
+        </Toast>
+      );
     }}
   </Story>
 </Canvas>
 
 ### Success message
+
 Use to providing a feedback loop. For example: Item copied.
+
 <Canvas>
   <Story name="Success message">
     {() => {
@@ -107,25 +125,28 @@ Use to providing a feedback loop. For example: Item copied.
       return (
         <Toast
           open
-          type={Toast.types.POSITIVE} 
+          type={Toast.types.POSITIVE}
           actions={actions}
           autoHideDuration={5000}
           className="monday-storybook-toast_wrapper"
         >
           Positive message toast
-        </Toast>);
+        </Toast>
+      );
     }}
   </Story>
 </Canvas>
 
 ### Error message
+
 Use when something was deleted, a problem has occured, etc.
+
 <Canvas>
   <Story name="Error message">
     {() => {
-     const actions = useMemo(() => [{ type: Toast.actionTypes.BUTTON, content: "Button" }], []);
+      const actions = useMemo(() => [{ type: Toast.actionTypes.BUTTON, content: "Button" }], []);
       return (
-        <Toast 
+        <Toast
           open
           actions={actions}
           type={Toast.types.NEGATIVE}
@@ -133,33 +154,39 @@ Use when something was deleted, a problem has occured, etc.
           className="monday-storybook-toast_wrapper"
         >
           Negative message toast
-        </Toast>);
+        </Toast>
+      );
     }}
   </Story>
 </Canvas>
 
 ## Do’s and Don’ts
+
 <ComponentRules
   rules={[
     {
       positive: {
-        component: <Toast open className="monday-storybook-toast_wrapper" hideIcon type={Toast.types.POSITIVE}>Duplicating Board</Toast>,
+        component: (
+          <Toast open className="monday-storybook-toast_wrapper" hideIcon type={Toast.types.POSITIVE}>
+            Duplicating Board
+          </Toast>
+        ),
         description: "Use only one toast on a screen at a time."
       },
       negative: {
-        component:
+        component: (
           <div className="monday-storybook-toast_inline-wrapper">
-            <Toast 
+            <Toast
               type={Toast.types.NEGATIVE}
               open
-              hideIcon 
+              hideIcon
               className="monday-storybook-toast_wrapper monday-storybook-toast_big"
               actions={[{ type: Toast.actionTypes.LINK, text: "Try again", href: "https://monday.com" }]}
             >
               Couldn’t load board items
             </Toast>
-            <Toast 
-              type={Toast.types.POSITIVE} 
+            <Toast
+              type={Toast.types.POSITIVE}
               className="monday-storybook-toast_wrapper"
               hideIcon
               text="Duplicating Board"
@@ -167,17 +194,31 @@ Use when something was deleted, a problem has occured, etc.
             >
               Duplicating Board
             </Toast>,
-          </div>,
+          </div>
+        ),
         description: <>Don’t place more than one toast on a screen at a time.</>
       }
     },
     {
       positive: {
-        component: <Toast open className="monday-storybook-toast_wrapper" type={Toast.types.POSITIVE} actions={[{ type: Toast.actionTypes.BUTTON, content: "Undo" }]}>We successfully archived 1 item</Toast>,
+        component: (
+          <Toast
+            open
+            className="monday-storybook-toast_wrapper"
+            type={Toast.types.POSITIVE}
+            actions={[{ type: Toast.actionTypes.BUTTON, content: "Undo" }]}
+          >
+            We successfully archived 1 item
+          </Toast>
+        ),
         description: "Always offer an option to undo the action. Keep the toast for 60 seconds before auto-removing it."
       },
       negative: {
-        component: <Toast open className="monday-storybook-toast_wrapper" type={Toast.types.POSITIVE}>We successfully archived 1 item</Toast>,
+        component: (
+          <Toast open className="monday-storybook-toast_wrapper" type={Toast.types.POSITIVE}>
+            We successfully archived 1 item
+          </Toast>
+        ),
         description: "Don’t offer an action without letting the user undo it."
       }
     }
@@ -185,8 +226,11 @@ Use when something was deleted, a problem has occured, etc.
 />
 
 ## Use cases and examples
+
 ### Feedback loop
+
 After a user has done an action, provide feedback to close the loop. For example, when an item has been deleted, duplicated, etc.
+
 <Canvas>
   <Story name="Feedback loop">
     {() => {
@@ -194,12 +238,14 @@ After a user has done an action, provide feedback to close the loop. For example
       const onClickCallback = useCallback(() => setToastOpen(toastOpen => !toastOpen), [setToastOpen]);
       const onCloseCallback = useCallback(() => setToastOpen(false), [setToastOpen]);
       const actions = useMemo(() => [{ type: Toast.actionTypes.BUTTON, content: "Undo" }], []);
-      return useMemo(() =>
+      return useMemo(() => (
         <>
-          <Button leftIcon={Delete} onClick={onClickCallback}>Delete item</Button>
+          <Button leftIcon={Delete} onClick={onClickCallback}>
+            Delete item
+          </Button>
           <Toast
-            open={toastOpen} 
-            type={Toast.types.POSITIVE} 
+            open={toastOpen}
+            type={Toast.types.POSITIVE}
             actions={actions}
             onClose={onCloseCallback}
             autoHideDuration={5000}
@@ -207,10 +253,12 @@ After a user has done an action, provide feedback to close the loop. For example
           >
             We successfully deleted 1 item
           </Toast>
-        </>);
+        </>
+      ));
     }}
   </Story>
 </Canvas>
 
 ## Related components
-<RelatedComponents componentsNames={[ALERT_BANNER,TOOLTIP,ATTENTION_BOX]} />
+
+<RelatedComponents componentsNames={[ALERT_BANNER, TOOLTIP, ATTENTION_BOX]} />
