--- a/src/components/Counter/__stories__/counter.stories.mdx
+++ b/src/components/Counter/__stories__/counter.stories.mdx
@@ -5,7 +5,7 @@ import { createComponentTemplate, createStoryMetaSettings } from "../../../story
 import { CHIP, LABEL, TOOLTIP } from "../../../storybook/components/related-components/component-description-map";
 import Avatar from "../../Avatar/Avatar.jsx";
 import { AddUpdate, Notifications, Update } from "../../Icon/Icons";
-import Icon from "../../Icon/Icon.jsx";
+import Icon from "../../Icon/Icon";
 import { Link } from "../../../storybook/components";
 import "./counter.stories.scss";
 
