--- a/src/components/ProgressBars/LinearProgressBar/__stories__/linearProgressBar.stories.mdx
+++ b/src/components/ProgressBars/LinearProgressBar/__stories__/linearProgressBar.stories.mdx
@@ -7,7 +7,7 @@ import {
 import colors from "../../../../constants/colors.json";
 import DialogContentContainer from "../../../DialogContentContainer/DialogContentContainer";
 import { Info } from "../../../Icon/Icons";
-import Icon from "../../../Icon/Icon.jsx";
+import Icon from "../../../Icon/Icon";
 import { SPINNER, STEPPER, SKELETON } from "../../../../storybook/components/related-components/component-description-map";
 import { Link } from "../../../../storybook/components";
 import BreadcrumbsBar from "../../../BreadcrumbsBar/BreadcrumbsBar.jsx";
