--- a/src/components/Tipseen/__stories__/tipseen.stories.mdx
+++ b/src/components/Tipseen/__stories__/tipseen.stories.mdx
@@ -4,7 +4,7 @@ import TipseenContent from "../TipseenContent";
 import TipseenWizard from "../TipseenWizard";
 import TipseenImage from "../TipseenImage";
 import picture from "./assets/picture.png"
-import Icon from "../../Icon/Icon.jsx";
+import Icon from "../../Icon/Icon";
 import { BoardPrivate, Board } from "../../Icon/Icons"
 import { modifiers } from "./helper";
 import { Link } from "../../../storybook/components";
