--- a/src/components/Tooltip/__stories__/tooltip.stories.mdx
+++ b/src/components/Tooltip/__stories__/tooltip.stories.mdx
@@ -3,7 +3,7 @@ import { capitalize } from "lodash";
 import TooltipReference from "./TooltipReference";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import { Hide, Subitems, Bolt } from "../../Icon/Icons";
-import Icon from "../../Icon/Icon.jsx";
+import Icon from "../../Icon/Icon";
 import Button from "../../Button/Button";
 import { modifiers } from "./helper";
 import { Link } from "../../../storybook/components";
