--- a/src/components/Checkbox/__stories__/checkbox.stories.mdx
+++ b/src/components/Checkbox/__stories__/checkbox.stories.mdx
@@ -82,7 +82,7 @@ Check React source and rendered HTML.
 <Canvas>
   <Story name="Labels">
     <Checkbox ariaLabel="With Label" label="With label" />
-    <Checkbox ariaLabel="With Component Label" label={<span class="custom-component-label"><Calendar size={12}/>Component Label</span>} />
+    <Checkbox ariaLabel="With Component Label" label={<span class="custom-component-label"><Calendar size="12" />Component Label</span>} />
     <Checkbox ariaLabel="With Empty Label" label="" />
     <Checkbox ariaLabel="Without Label" label={false} />
   </Story>
